k8s-resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: f5-ent-service
spec:
  selector:
    app: nodejs-sqldb-ent-service
    release: azuredevops
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
